docs: update README with detailed installation and execution instructions